fixed text just need to add images andextra space

--- a/woah.css
+++ b/woah.css
@@ -47,15 +47,17 @@ body {
 }
 
 #introduction {
-  justify-content: center;
+  justify-content: right;
   display: flex;
-  text-align: center;
+  text-align: right;
   padding: 50px;
   border: #000000;
   border-width: 10px;
   width: 255px;
   height: 424px;
   position: absolute;
+  margin-left: 50%;
+  top: 20%;
 }
 
 #box1 {
@@ -66,6 +68,8 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
+  text-align: right;
+  position: relative;
 }
 
 #box2 {
@@ -97,9 +101,10 @@ body {
   background-color: #ffffff;
   padding: 10px;
   display: flex;
-  justify-content: center;
-  text-align: center;
+  justify-content: left;
+  text-align: left;
   position: relative;
+  font-size: medium;
 }
 
 #textbox3 {
@@ -146,6 +151,9 @@ body {
   
 }
 
+p {
+  letter-spacing: 3px;
+}
 
   .footer {
       
